--- a/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,4 +1,4 @@
-name=Create All the Things for Liferay Master
+name=Create All the Things for Master
 module-group-id=liferay
 module-incremental-version=1
 tags=
@@ -7,5 +7,5 @@ long-description=
 change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
-licenses=EE
-liferay-versions=
+licenses=LGPL
+liferay-versions=7.0.0+
